// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 700;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  text-overflow: ellipsis;
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-3:first-child,
.emotion-3:last-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  cursor: default;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-8>code {
  color: #016BF8;
}

.emotion-8:focus,
.emotion-8:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-8:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-8:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-9 {
  font-size: 13px;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<p
    class="emotion-0"
  >
    <span
      class="emotion-1 emotion-2"
    >
      <span
        class="emotion-3"
      >
        <a
          class="lg-ui-0001 emotion-4"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </span>
      <span
        class="emotion-5 emotion-6"
      >
         / 
      </span>
      <span
        class="emotion-3"
      >
        <a
          class="emotion-8 emotion-9"
          href="/view-analyze/"
        >
          View & Analyze Data
        </a>
      </span>
    </span>
  </p>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 700;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  text-overflow: ellipsis;
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-3:first-child,
.emotion-3:last-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  cursor: default;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-8>code {
  color: #016BF8;
}

.emotion-8:focus,
.emotion-8:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-8:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-8:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-9 {
  font-size: 13px;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<p
    class="emotion-0"
  >
    <span
      class="emotion-1 emotion-2"
    >
      <span
        class="emotion-3"
      >
        <a
          class="lg-ui-0001 emotion-4"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </span>
      <span
        class="emotion-5 emotion-6"
      >
         / 
      </span>
      <span
        class="emotion-3"
      >
        <a
          class="emotion-8 emotion-9"
          href="/"
        >
          MongoDB Compass
        </a>
      </span>
    </span>
  </p>
</DocumentFragment>
`;
